--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@
 }
 
 body {
+  height: 100vh;
+  display: grid;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
@@ -31,8 +35,6 @@ body {
   align-items: center;
   flex-wrap: wrap;
   gap: 35px;
-  /* background-color: var(--Very-dark-blue); */
-  margin: 150px auto;
   max-width: 1140px;
 }
 
@@ -223,7 +225,7 @@ body {
   .container .activity-wrapper,
   .featured {
     width: 100%;
-    margin: 0px 15px 25px 15px;
+    margin: 10px 15px 25px 15px;
   }
 }
 
